syntax = "proto3";

package dnf.v1;

option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

import "dnf/v1/common.proto";
import "dnf/v1/option_types.proto";

// 系统功能消息类型
message RES_START_GAME {
  int32 error = 1;
  int64 userId = 2;
  string userName = 3;
}

message RES_STANDBY {
  int32 error = 1;
  string message = 2;
}
